# immatout

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/agents/: growth-marketing-agent.md
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: breadcrumbs.tsx  page-header.tsx  plausible-analytics.tsx  site-footer.tsx  site-header.tsx
apps/web/e2e/: calculator.spec.ts  navigation.spec.ts  pdf.spec.ts
apps/web/lib/: format.ts  i18n.ts  prisma.ts  seo.ts  use-calculate.ts
apps/web/prisma/: schema.prisma  seed-catalog.ts  seed.ts
apps/web/tests/: calculate.test.ts  documents.test.ts  plate.test.ts  regions.test.ts  setup.ts  vehicle.test.ts
marketing/00-context/: brief.md  guide-gsc-bing.md
marketing/01-audit/: concurrence.md  mots-cles.md  seo-audit-2026-05-02.md  seo-offpage.md  seo-onpage.md  seo-technique.md  social-actuel.md  synthese-executive.md
marketing/02-strategie/: architecture-contenu.md  calendrier-editorial.md  personas.md  roadmap-90j.md  strategie.md
marketing/03-production/outreach/: annuaires-fr.md  digital-pr.md  product-hunt.md  show-hn.md
marketing/03-production/social/: guide-creation-comptes.md  (+2 more)
marketing/04-reporting/: kpis.md  sprint-7j-bilan.md
scripts/ingestion/: README.md  build_seed.py  fetch_ademe.py  fetch_eea.py  pyproject.toml
(+94 files in other folders)
